--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  
+  <title>Task List</title>
+</head>
+
+<body>
+  <div class="header-logo">
+    <h1 class="header">Task List</h1>
+  </div>
+
+  <div class="container">
+    <div class="input-group">
+
+      <label for="newTask" class="input-label">Add New Task</label>
+      <input id="newTask" type="text"  placeholder="Enter task here" />
+      <button class="submit-task" id="btnSubmit">Submit</button>
+    </div>
+
+    <p id="message"></p>
+    <div class="entered-tasks" id="tasks"></div>
+    <button class="clear-list" id="btnClear">
+      Clear List
+    </button>
+  </div>
+  <script src="script.js"></script>
+</body>
+
+</html>
+
+
+
+
+
+
+
 
